# langgraph-research-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
docs/: agents.md  architecture.md  deployment.md  rag-pipeline.md
examples/: basic_research.py  batch_research.py  document_qa.py  evaluate_pipeline.py  export_report.py  memory_conversation.py  supervisor_mode.py
scripts/: benchmark.py  evaluate.py  ingest.py  init_pgvector.sql  setup_db.py
src/research_agent/: __init__.py  adaptive_chunker.py  agent_coordinator.py  agent_memory.py  agent_registry.py  agent_trace.py  answer_cache.py  answer_validator.py  api.py  async_queue.py  auth.py  backoff.py  batch.py  batch_processor.py  benchmark_runner.py  budget_guard.py  cache.py  cache_invalidator.py  checkpoint_manager.py  citation_deduplicator.py  citation_formatter.py  citation_index.py  cli.py  confidence_calibrator.py  config.py  config_loader.py  config_validator.py  constants.py  content_deduplicator.py  context_builder.py  context_compressor.py  context_window_manager.py  data_normalizer.py  dependency_resolver.py  doc_registry.py  doc_summarizer.py  document_ranker.py  document_scorer.py  document_store.py  error_classifier.py  (+107 more)
src/research_agent/agents/: abstract_generator.py  analyst.py  answer_synthesizer.py  argument_mapper.py  base_agent.py  citation_verifier.py  claim_extractor.py  confidence_estimator.py  contradiction_detector.py  entity_linker.py  fact_checker.py  fact_extractor.py  gap_analyzer.py  hypothesis_generator.py  insight_extractor.py  key_terms_extractor.py  metadata_enricher.py  narrative_builder.py  outline_generator.py  planner.py  query_planner.py  relationship_mapper.py  researcher.py  retriever_agent.py  source_critic.py  summary_ranker.py  supervisor.py  synthesizer.py  topic_modeler.py  web_scraper.py
src/research_agent/eval/: __init__.py  harness.py  metrics.py  result.py  scorer.py
src/research_agent/rag/: chunker.py  chunking_strategy.py  corpus_stats.py  document_filter.py  document_loader.py  embedding_cache.py  hybrid_retriever.py  hybrid_search.py  index_manager.py  ingestion.py  metadata_filter.py  passage_extractor.py  post_processor.py  query_expansion.py  query_router.py  reranker.py  result_merger.py  result_processor.py  retriever.py  sparse_retriever.py
src/research_agent/tools/: search.py
tests/: conftest.py  test_abstract_generator.py  test_adaptive_chunker.py  test_agent_coordinator.py  test_agent_memory.py  test_agent_registry.py  test_agent_trace.py  test_agents.py  test_answer_cache.py  test_answer_validator.py  test_api.py  test_argument_mapper.py  test_async_queue.py  test_backoff.py  test_batch.py  test_batch_processor.py  test_benchmark_runner.py  test_budget_guard.py  test_cache.py  test_cache_invalidator.py  test_checkpoint_manager.py  test_chunker.py  test_chunking_strategy.py  test_citation_deduplicator.py  test_citation_formatter.py  test_citation_index.py  test_claim_extractor.py  test_confidence_calibrator.py  test_confidence_estimator.py  test_config_loader.py  test_config_validator.py  test_content_deduplicator.py  test_context_builder.py  test_context_compressor.py  test_context_window_manager.py  test_contradiction_detector.py  test_corpus_stats.py  test_data_normalizer.py  test_dependency_resolver.py  test_doc_registry.py  (+135 more)
tests/integration/: test_pipeline.py
