[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "research-agent"
version = "0.2.0"
description = "Multi-agent research and document analysis system built with LangGraph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langchain-chroma>=0.1.4",
    "langchain-postgres>=0.0.9",
    "langchain-text-splitters>=0.3.0",
    "tavily-python>=0.3.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.2",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0.1",
    "chromadb>=0.5.0",
    "langsmith>=0.1.0",`r`n    "rank-bm25>=0.2.2",`r`n    "sentence-transformers>=3.0.0",`r`n    "click>=8.1.0",`r`n    "rich>=13.0.0",`r`n    "fpdf2>=2.7.0",`r`n    "markdown>=3.6.0",`r`n    "tqdm>=4.66.0",
]

[project.optional-dependencies]
postgres = [
    "psycopg[binary]>=3.1.0",
    "pgvector>=0.3.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
